bpo-20486: Implement Database.Close() method in msilib